--- a/site/assets/css/main.css
+++ b/site/assets/css/main.css
@@ -19,10 +19,10 @@
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
-  --default-color: #4e4e4e; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #5f5f5f; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #53a984; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --background-color: #f7fafc; /* Background color for the entire website, including individual sections */
+  --default-color: #1a202c; /* Default color used for the majority of the text content across the entire website */
+  --heading-color: #1a202c; /* Color for headings, subheadings and title throughout the website */
+  --accent-color: #2f855a; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -152,7 +152,7 @@ h6 {
 # Global Header
 --------------------------------------------------------------*/
 .header {
-  --background-color: rgba(11, 45, 64, 0.8);
+  --background-color: rgba(31, 42, 51, 0.8);
   --default-color: #ffffff;
   --heading-color: #ffffff;
   color: var(--default-color);
@@ -180,7 +180,7 @@ h6 {
 }
 
 .scrolled .header {
-  box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0 18px rgba(31, 41, 51, 1);
 }
 
 /*--------------------------------------------------------------
@@ -327,7 +327,7 @@ h6 {
   }
 
   .mobile-nav-toggle {
-    color: var(--nav-color);
+    color: #f7fafc;
     font-size: 28px;
     line-height: 0;
     margin-right: 10px;
